# credit-pulse

./: .gitignore  CreditPulse_Presentation.pptx  Makefile  README.md  pyproject.toml
backend/: main.py
backend/api/routes/: health.py  insights.py  scoring.py  sql_analysis.py
backend/core/: config.py  database.py
backend/models/: schemas.py
backend/services/: analytics.py  credit_model.py  feature_engine.py  sql_extract.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: transaction_categories.sql
dbt/models/marts/: mart_credit_features.sql  mart_risk_segments.sql
dbt/models/staging/: stg_loan_repayments.sql  stg_mpesa_transactions.sql
docs/: patascore_strategy.md  realtime_strategy.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.tsx  RiskScorer.tsx  SQLAnalysis.tsx
frontend/src/components/charts/: BettingCorrelation.tsx  CategoryBreakdown.tsx  FeatureImportance.tsx  RepaymentDistribution.tsx  RiskSegments.tsx  TransactionFlows.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
pipelines/flows/: ingest.py  train.py  transform.py
scripts/: batch_export.py  convert_excalidraw.py  generate_all.py
sql/: analysis_queries.sql
