[project]
name = "credit-pulse"
version = "0.1.0"
description = "Credit risk scoring platform analyzing M-Pesa transaction data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-duckdb>=1.9.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
all = [
    "credit-pulse[dbt,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "pipelines"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
